error fixes and error dark mode

--- a/src/css/stylus/themes/dark.styl
+++ b/src/css/stylus/themes/dark.styl
@@ -673,3 +673,8 @@
         .autor_card
             .back
                 background #232323
+
+    .error_panel
+        .error_card
+            h2
+                color #fff
